Fixed spacing in package and inclusions/exclusions

--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -13,6 +13,7 @@
   transition: transform 0.5s ease-in-out;
   width: 100%;
   height: fit-content;
+  margin-bottom: 1rem;
   background-color: $surface-color;
 
   & h3 {
